force-app/main/default/objects/Energy_Audit__c/fields/Annual_Energy_Usage_kWh__c.field-meta.xml
<CustomField>
    <fullName>Annual_Energy_Usage_kWh__c</fullName>
    <inlineHelpText>Annual_Energy_Usage_kWh</inlineHelpText>
    <label>Uso de energia anual (kWh)</label>
    <precision>10</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>