force-app/main/default/objects/Energy_Audit__c/fields/Consumo_energ_tico_anual_kWh__c.field-meta.xml
<CustomField>
    <fullName>Consumo_energ_tico_anual_kWh__c</fullName>
    <inlineHelpText>Consumo energético anual (kWh)</inlineHelpText>
    <label>Consumo energético anual (kWh)</label>
    <precision>10</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>