force-app/main/default/objects/Energy_Audit__c/fields/M_dia_do_custo_anual_de_eletricidade__c.field-meta.xml
<CustomField>
    <fullName>M_dia_do_custo_anual_de_eletricidade__c</fullName>
    <inlineHelpText>Custo anual por pé quadrado.</inlineHelpText>
    <label>Média do custo anual de eletricidade</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>